Add PUT for Tag and Template
